--- a/src/pop-up/styles.css
+++ b/src/pop-up/styles.css
@@ -1,33 +1,55 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f8f8f8;
+    font-family: 'Arial', sans-serif;
+    background-color: #fafafa;
+    color: #333;
     margin: 0;
-    padding: 10px;
+    padding: 20px;
+    width: 300px;  /* Adjust the width of your popup */
+    text-align: center;
 }
 
 h1 {
-    color: #333;
+    color: #4a76a8;
+    font-size: 24px;
 }
 
 #stats-container {
     background-color: #fff;
-    border-radius: 5px;
-    padding: 10px;
+    border-radius: 10px;
+    padding: 20px;
     margin-top: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
     margin-top: 0;
+    font-size: 20px;
+    color: #4a76a8;
 }
 
 #total-time, #time-per-site {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    font-size: 16px;
+}
+
+#total-time-spent {
+    font-weight: bold;
 }
 
 ul {
-    padding-left: 20px;
+    list-style-type: none;
+    padding: 0;
+    text-align: left;
 }
 
 li {
-    margin-bottom: 5px;
+    background-color: #eee;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 10px;
+    transition: background-color 0.3s;
+}
+
+li:hover {
+    background-color: #ddd;
 }
